--- a/index.html
+++ b/index.html
@@ -146,15 +146,91 @@
                         <h2 class="main__cta-text-subtitle">Thousand more fun !</h2>
                         <p class="main__cta-text-description">Having a pet means you have more joy, a new friend, a happy person who will always be with you to have fun. We have 200+ different pets that can meet your needs!</p>
                         <div class="main__cta-text-containerbtn">
-                            <a href="#" class="main__cta-text-containerbtn-button main__cta-containerbtn-button-1">View intro <img src="img/Vector.svg " alt=""></a>
+                            <a href="#" class="main__cta-text-containerbtn-button main__cta-text-containerbtn-button-1">View intro <img src="img/Vector.svg " alt=""></a>
                             <a href="#" class="main__cta-text-containerbtn-button">Explore Now</a>
                         </div>
                     </div>
-
-
-
-
                 </div>
+
+                    <div class="main__info">
+                        <div class="main__info-header">
+                            <div class="main__info-header-text">
+                                <p class="main__info-header-text-p">You already know ?</p>
+                                <h2 class="main__info-header-text-title-">Useful pet knowledge</h2>
+                            </div>
+
+                            <a class="main__info-header-button" href="#">View More <img src="img/Vector.svg" alt=""></a>
+
+
+                        </div>
+
+                        <div class="main__info-container">
+
+                            <div class="main__info-container-card">
+                                <img src="img/dog-run.png" alt="Dog run">
+                                <div class="main__info-container-card-text">
+                                    <h3 class="main__info-container-card-text-title">Pet knowledge</h3>
+                                    <h2 class="main__info-container-card-text-subtitle">What is a Pomeranian? How to Identify Pomeranian Dogs</h2>
+                                    <p class="main__info-container-card-text-description">The Pomeranian, also known as the Pomeranian (Pom dog), is always in the top of the cutest pets. Not only that, the small, lovely, smart, friendly, and skillful circus dog breed.</p>
+                                </div>
+                            </div>
+                            <div class="main__info-container-card">
+                                <img src="img/dog-salmon.png" alt="Dog run">
+                                <div class="main__info-container-card-text">
+                                    <h3 class="main__info-container-card-text-title">Pet knowledge</h3>
+                                    <h2 class="main__info-container-card-text-subtitle">Dog Diet You Need To Know</h2>
+                                    <p class="main__info-container-card-text-description">Dividing a dog's diet may seem simple at first, but there are some rules you should know so that your dog can easily absorb the nutrients in the diet. For those who are just starting to raise dogs, especially newborn puppies with relatively weak resistance.</p>
+                                </div>
+                            </div>
+                            <div class="main__info-container-card">
+                                <img src="img/dog-messy.png" alt="Dog run">
+                                <div class="main__info-container-card-text">
+                                    <h3 class="main__info-container-card-text-title">Pet knowledge</h3>
+                                    <h2 class="main__info-container-card-text-subtitle">Why Dogs Bite and Destroy Furniture and How to Prevent It Effectively</h2>
+                                    <p class="main__info-container-card-text-description">Dog bites are common during development. However, no one wants to see their furniture or important items being bitten by a dog.</p>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+
+                <footer class="main__footer">
+                    <div class="main__footer-input">
+                        <h2 class="main__footer-input-title">Register Now So You Don't Miss Our Programs</h2>
+                        <div class="main__footer-input-container">
+                            <input class="main__footer-input-container-field" type="text" placeholder="Enter your Email">
+                            <a class="main__footer-input-container-button" href="#">Subscribe Now</a>
+                        </div>
+                    </div>
+
+                    <div class="footer__info">
+                        <div class="footer__info-btn">
+                            <a href="" class="footer__info-btn-link">Home</a>
+                            <a href="" class="footer__info-btn-link">Category</a>
+                            <a href="" class="footer__info-btn-link">About</a>
+                            <a href="" class="footer__info-btn-link">Contact</a>
+                        </div>
+
+                        <div class="footer__info-social">
+                            <a href="" class="footer__info-social-link"><i class="fa-brands fa-facebook"></i></a>
+                            <a href="" class="footer__info-social-link"><i class="fa-brands fa-twitter"></i></a>
+                            <a href="" class="footer__info-social-link"><i class="fa-brands fa-instagram"></i></a>
+                            <a href="" class="footer__info-social-link"><i class="fa-brands fa-youtube"></i></a>
+                        </div>
+                    </div>
+
+                    <div class="footer__legal">
+                        <p class="footer__legal-text">© 2022 Monito. All rights reserved.</p>
+                        <img src="img/logo.png" alt="Logo monito" class="footer__legal-logo">
+                        <div class="footer__legal-links">
+                            <a href="" class="footer__legal-link">Terms of Service</a>
+                            <a href="" class="footer__legal-link">Privacy Policy</a>
+                        </div>
+                    </div>
+
+                </footer>
+
         
 
     </main>
