ajout du footer et de son scss

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                         </div>
                     </div>
 
-                    <div class="footer__info">
+                    <div class="main__footer-info">
                         <div class="footer__info-btn">
                             <a href="" class="footer__info-btn-link">Home</a>
                             <a href="" class="footer__info-btn-link">Category</a>
@@ -212,7 +212,7 @@
                             <a href="" class="footer__info-btn-link">Contact</a>
                         </div>
 
-                        <div class="footer__info-social">
+                        <div class="main__footer-info-social">
                             <a href="" class="footer__info-social-link"><i class="fa-brands fa-facebook"></i></a>
                             <a href="" class="footer__info-social-link"><i class="fa-brands fa-twitter"></i></a>
                             <a href="" class="footer__info-social-link"><i class="fa-brands fa-instagram"></i></a>
@@ -220,12 +220,12 @@
                         </div>
                     </div>
 
-                    <div class="footer__legal">
-                        <p class="footer__legal-text">© 2022 Monito. All rights reserved.</p>
-                        <img src="img/logo.png" alt="Logo monito" class="footer__legal-logo">
-                        <div class="footer__legal-links">
-                            <a href="" class="footer__legal-link">Terms of Service</a>
-                            <a href="" class="footer__legal-link">Privacy Policy</a>
+                    <div class="main__footer-legal">
+                        <p class="main__footer-legal-text">© 2022 Monito. All rights reserved.</p>
+                        <img src="img/logo.png" alt="Logo monito" class="main__footer-legal-logo">
+                        <div class="main__footer-legal-links">
+                            <a href="" class="main__footer-legal-link">Terms of Service</a>
+                            <a href="" class="main__footer-legal-link">Privacy Policy</a>
                         </div>
                     </div>
 
